--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "node node_modules/ts-node/dist/bin test/index.ts"
+    "test:di": "node node_modules/ts-node/dist/bin test/di",
+    "test:router": "node node_modules/ts-node/dist/bin test/router"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^10.12.15",
-    "@types/reflect-metadata": "^0.1.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "tslint": "^5.11.0"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.12",
-    "tslint": "^5.11.0"
+    "reflect-metadata": "^0.1.12"
   }
 }
