--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "aws-lambda-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.ts",
   "scripts": {
     "build": "tsc",
     "test:di": "node node_modules/ts-node/dist/bin test/di",
