--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test:di": "node node_modules/ts-node/dist/bin test/di",
-    "test:router": "node node_modules/ts-node/dist/bin test/router"
+    "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marco Orta",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "latest",
-    "ts-node": "latest",
-    "typescript": "latest",
-    "tslint": "latest"
+    "@jest/globals": "^29.4.2",
+    "@types/node": "^18.13.0",
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "reflect-metadata": "latest"
+    "reflect-metadata": "^0.1.13"
   }
 }
