--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --coverage"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Marco Orta",
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.4.2",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
+    "ts-morph": "^17.0.1",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
     "reflect-metadata": "^0.1.13"
   }
 }
